added comments & fix bugs
